# avtomail

./: .gitignore  README.md  pyproject.toml  run_local.py  run_project.ps1
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240917_01_initial_schema.py  20240917_02_add_scenarios_and_logs.py  20240925_03_admin_attachments.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  auth.py  conversations.py  scenarios.py
backend/app/cli/: manage.py
backend/app/core/: config.py  logging.py  monitoring.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  attachment.py  base.py  client.py  conversation.py  enums.py  log.py  message.py  scenario.py  user.py
backend/app/schemas/: __init__.py  client.py  common.py  conversation.py  log.py  message.py  scenario.py  user.py
backend/app/services/: attachment_service.py  auth_service.py  automation_service.py  conversation_service.py  language_service.py  llm_service.py  mail_service.py  scenario_service.py
backend/app/utils/: bootstrap.py
backend/app/web/: __init__.py  router.py
backend/app/web/static/: app.css  app.js
backend/app/web/templates/: index.html
backend/app/workers/: __init__.py  celery_app.py  poller.py  tasks.py
backend/tests/: conftest.py  test_attachment_service.py  test_automation_service.py  test_conversation_service.py
scripts/: deploy.ps1  dev.ps1  dev.py  dev.sh
